fixed body center alignment issues

--- a/sass/blocks/index.sass
+++ b/sass/blocks/index.sass
@@ -5,9 +5,12 @@
   font-size: $tagline_textSize
   padding-top: 5rem
   padding-bottom: 8rem
+  text-align: center
 
 .index__logo
   position: relative
+  width: 70%
+  left: 20%
 
 .index__header
   padding-top: 5rem
@@ -63,3 +66,4 @@
 .main
   background-color: $secondaryBlue
   padding-bottom: 8rem
+  text-align: center
