--- a/sass/helpers/base.sass
+++ b/sass/helpers/base.sass
@@ -10,6 +10,7 @@ html
 body
   background-color: $backgroundColor
   font-family: 'Helvetica', sans-serif
+  display: inline
 
 a
   text-decoration: none
@@ -25,11 +26,6 @@ main
   background-color: $navyBlue
   height: 100rem
   font-family: sans-serif
-
-body
-  display: inline
-  text-align: center
-  background: $backgroundColor
 
 
 
